<resources>
    <string name="app_name">CryptoCurrency</string>
    <string name="insert_data">Insert Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="show_crypto">Show Crypto Currencies</string>
    <string name="show_fiat">Show Fiat Currencies</string>
    <string name="show_all">Show All Currencies</string>
    <string name="loading">Loading…</string>
    <string name="loading_currency_list_error">Failed to load currency list: %1$s</string>
    <string name="data_deletion_success">Data deleted successfully</string>
    <string name="data_deletion_error">Failed to delete data: %1$s</string>
    <string name="data_insertion_success">Data inserted successfully</string>
    <string name="data_insertion_error">Failed to insert data: %1$s</string>
    <string name="dismiss">Dismiss</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="arrow">Arrow</string>
    <string name="search">Search</string>
    <string name="no_results_found">No Results Found!!!</string>
    <string name="no_records_in_db">Looks like there is no data in the database. Try inserting data first and try again!!!</string>
</resources>