...
        }
    }

    Column(
        modifier = Modifier
            .fillMaxSize()
            .testTag("demo_screen_container")
    ) {
        DemoScreenContent(
            actionHandler = object : DemoScreenActionHandler {
                override fun onClearDatabase() = viewModel.clearCurrencies()
                override fun onInsertData() = viewModel.insertData()
                override fun onShowCrypto() = viewModel.showCryptoCurrencies()
...
